--- a/frontend/package.json
+++ b/frontend/package.json
@@ -57,7 +57,9 @@
     ]
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.19",
     "node-sass": "^8.0.0",
-    "tailwindcss": "^3.2.7"
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3"
   }
 }
